feat: 협업지점 관리페이지, 테이블 페이지네이션 추가

--- a/index.html
+++ b/index.html
@@ -1,23 +1,17 @@
 <!DOCTYPE html>
-
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/assets/main_logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>UPbrella | 공유 우산 플랫폼</title>
+    <script
+      type="text/javascript"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%VITE_KAKAO_MAP_API_KEY%&libraries=services"
+    ></script>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
-
-  <script
-    defer
-    type="text/javascript"
-    src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%VITE_KAKAO_API_KEY%&libraries=services&autoload=false"
-  ></script>
-
-</html>
-
 </html>
