--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>UPbrella | 공유 우산 플랫폼</title>
     <script
       type="text/javascript"
-      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%VITE_KAKAO_MAP_API_KEY%&libraries=services"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%VITE_NAVER_MAP_API_KEY%&libraries=services"
     ></script>
     <!-- Naver Map  -->
     <script
