chore: index.html 에서 env 읽도록 수정

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <title>UPbrella | 공유 우산 플랫폼</title>
     <script
       type="text/javascript"
-      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%VITE_NAVER_MAP_API_KEY%&libraries=services"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=<%= kakaoKey %>&libraries=services"
     ></script>
     <!-- Naver Map  -->
     <script
       type="text/javascript"
-      src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=%VITE_NAVER_MAP_API_CLIENT_ID%"
+      src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=<%= naverKey %>"
     ></script>
   </head>
   <body>
