--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
       name="description"
       content="지구를 지키는 작은 우산, 업브렐라를 펼쳐주세요! A Better Choice, UPbrella"
     />
+    <meta
+      name="keywords"
+      content="업브렐라, upbrella, Upbrella, 공유 우산 플랫폼, 우산 공유, 공유 우산"
+    />
     <meta property="og:title" content="UPbrella | 공유 우산 플랫폼" />
     <meta property="og:image" content="https://upbrella.co.kr/assets/section3-af1c1a5c.png" />
     <meta property="og:type" content="website" />
