chore: 구글 서치 콘솔 메타 태그, sitemap 추가

--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
       type="text/javascript"
       src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=<%= naverKey %>"
     ></script>
+
+    <!-- Google Search Console -->
+    <meta name="google-site-verification" content="Mo9YbI4CJNYoxU0553ZfKGfRKaqppv0qHZURHEOBcW8" />
+    <!-- Google Search Console End -->
   </head>
 
   <body>
