chore: robots.txt 변경

--- a/index.html
+++ b/index.html
@@ -30,10 +30,16 @@
       name="keywords"
       content="업브렐라, upbrella, Upbrella, 공유 우산 플랫폼, 우산 공유, 공유 우산"
     />
+
+    <meta property="og:type" content="website" />
     <meta property="og:title" content="UPbrella | 공유 우산 플랫폼" />
     <meta property="og:image" content="https://upbrella.co.kr/assets/section3-af1c1a5c.png" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://upbrella.co.kr/" />
+    <meta
+      property="og:description"
+      content="지구를 지키는 작은 우산, 업브렐라를 펼쳐주세요! A Better Choice, UPbrella"
+    />
 
     <!-- Kakao Map -->
     <script
