fix: 협업지점 api - 비밀번호 필드 삭제 반영

--- a/index.html
+++ b/index.html
@@ -20,6 +20,35 @@
     <link rel="icon" type="image/svg+xml" href="/src/assets/main_logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <!-- SEO -->
+    <title>업브렐라(UPbrella) | 공유 우산 플랫폼</title>
+    <meta name="title" content="업브렐라(UPbrella) | 공유 우산 플랫폼" />
+    <meta
+      name="description"
+      content="지구를 지키는 작은 우산, 업브렐라를 펼쳐주세요! A Better Choice, UPbrella"
+    />
+    <meta
+      name="keywords"
+      content="업브렐라, UPbrella, upbrella, Upbrella, 공유 우산 플랫폼, 우산 공유 플랫폼, 공유 우산, 우산, 공유 우산 서비스, 신촌, 연세대학교"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="업브렐라(UPbrella) | 공유 우산 플랫폼" />
+    <meta property="og:site_name" content="업브렐라(UPbrella) | 공유 우산 플랫폼" />
+    <meta
+      property="og:description"
+      content="지구를 지키는 작은 우산, 업브렐라를 펼쳐주세요! A Better Choice, UPbrella"
+    />
+    <meta property="og:image" content="https://upbrella.co.kr/assets/section3-af1c1a5c.png" />
+    <meta property="og:url" content="https://upbrella.co.kr/" />
+    <meta name="twitter:title" content="업브렐라(UPbrella) | 공유 우산 플랫폼" />
+    <meta
+      name="twitter:description"
+      content="지구를 지키는 작은 우산, 업브렐라를 펼쳐주세요! A Better Choice, UPbrella"
+    />
+    <meta name="twitter:image" content="https://upbrella.co.kr/assets/section3-af1c1a5c.png" />
+
+    <link rel="canonical" href="https://upbrella.co.kr/" />
+
     <!-- Kakao Map -->
     <script
       type="text/javascript"
